--- a/plugins/eulas/po/cs/webyast-licenses-ui.po
+++ b/plugins/eulas/po/cs/webyast-licenses-ui.po
@@ -1,53 +1,53 @@
+# Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2005-07-31 14:37+0200\n"
-"Last-Translator: Klara Cihlarova <koty@seznam.cz>\n"
-"Language-Team: Czech <cs@li.org>\n"
+"POT-Creation-Date: 2011-05-30 16:17+0200\n"
+"PO-Revision-Date: 2010-06-05 18:51+0200\n"
+"Last-Translator: Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>\n"
+"Language-Team: Czech <opensuse-translation@opensuse.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.1\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: app/controllers/eulas_controller.rb:93
 #: app/controllers/eulas_controller.rb:93
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "Před používáním tohoto produktu musíte přijmout licenci!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#, fuzzy
+#: app/views/eulas/all_accepted.erb:1 app/views/eulas/no_licenses.erb:1
+#: app/views/eulas/all_accepted.erb:1 app/views/eulas/no_licenses.erb:1
 msgid "Accept End User Licence Agreement"
-msgstr "_Licenční ujednání"
-
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-#, fuzzy
-msgid "Licence Agreement"
-msgstr "_Licenční ujednání"
-
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
-#, fuzzy
-msgid "Yes, I agree to the license agreement."
-msgstr "Licenční ujednání selhalo"
-
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
-msgid "No, I do not agree."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
-msgid "Back"
-msgstr "Zpět"
+msgstr "Přijmout licenční ujednání pro koncového uživatele"
 
 #: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
 msgid "All licenses have already been accepted"
-msgstr ""
+msgstr "Všechny licence byly přijaty"
+
+#: app/views/eulas/show.html.erb:24 app/views/eulas/show.html.erb:34
+#: app/views/eulas/show.html.erb:24 app/views/eulas/show.html.erb:34
+msgid "Licence Agreement"
+msgstr "Licenční ujednání"
+
+#: app/views/eulas/show.html.erb:55 app/views/eulas/show.html.erb:55
+msgid "Yes, I agree to the license agreement."
+msgstr "Ano, souhlasím s licenčním ujednáním."
+
+#: app/views/eulas/show.html.erb:59 app/views/eulas/show.html.erb:59
+msgid "No, I do not agree."
+msgstr "Ne, nesouhlasím."
+
+#: app/views/eulas/show.html.erb:76 app/views/eulas/show.html.erb:76
+msgid "Back"
+msgstr "Zpět"
+
+#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
+msgid "There are no licenses to accept."
+msgstr "Nejsou žádné licence ke schválení."
 
 #, fuzzy
 #~| msgid "Available Processors"
