--- a/plugins/firewall/po/cs/webyast-firewall-ui.po
+++ b/plugins/firewall/po/cs/webyast-firewall-ui.po
@@ -1,59 +1,70 @@
+# Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>, 2010.
+# Jiri Srain <jsrain@suse.cz>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2005-07-31 14:37+0200\n"
-"Last-Translator: Klara Cihlarova <koty@seznam.cz>\n"
-"Language-Team: Czech <cs@li.org>\n"
+"POT-Creation-Date: 2011-05-30 16:17+0200\n"
+"PO-Revision-Date: 2011-06-02 17:06+0200\n"
+"Last-Translator: Jiri Srain <jsrain@suse.cz>\n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.1\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: app/controllers/firewall_controller.rb:72
 #: app/controllers/firewall_controller.rb:72
-#, fuzzy
 msgid "Firewall settings have been written."
-msgstr "Konfigurační soubor byl zapsán."
+msgstr "Nastavení firewallu bylo zapsáno."
 
-#: app/views/firewall/index.rhtml:53 app/views/firewall/index.rhtml:53
-msgid ""
-"Some of needed services (%s) are going to be blocked. WebYaST may not be "
-"usable anymore. Do you really want to block them?"
-msgstr ""
-
-#: app/views/firewall/index.rhtml:80 app/views/firewall/index.rhtml:80
-#: shortcuts.yml:6
-#, fuzzy
-msgid "Firewall"
-msgstr "SuSE Firewall 2"
-
-#: app/views/firewall/index.rhtml:98 app/views/firewall/index.rhtml:98
-#, fuzzy
-msgid "General settings"
-msgstr "Obecná nastavení"
-
-#: app/views/firewall/index.rhtml:105 app/views/firewall/index.rhtml:105
-#, fuzzy
-msgid "Use Firewall"
-msgstr "SuSE Firewall 2"
-
-#: app/views/firewall/index.rhtml:110 app/views/firewall/index.rhtml:110
-#, fuzzy
-msgid "Allowed services"
-msgstr "inted"
-
-#: app/views/firewall/index.rhtml:120 app/views/firewall/index.rhtml:120
-#, fuzzy
-msgid "Blocked services"
-msgstr "nfslock"
-
+#: app/views/firewall/index.rhtml:31 app/views/firewall/index.rhtml:31
 #: shortcuts.yml:7
-#, fuzzy
+msgid "Firewall"
+msgstr "Firewall"
+
+#: app/views/firewall/index.rhtml:46 app/views/firewall/index.rhtml:49
+#: app/views/firewall/index.rhtml:46 app/views/firewall/index.rhtml:49
+msgid "Enabled"
+msgstr "povoleno"
+
+#: app/views/firewall/index.rhtml:47 app/views/firewall/index.rhtml:50
+#: app/views/firewall/index.rhtml:47 app/views/firewall/index.rhtml:50
+msgid "Disabled"
+msgstr "Zakázáno"
+
+#: app/views/firewall/index.rhtml:73 app/views/firewall/index.rhtml:73
+msgid "Allowed services"
+msgstr "Povolené služby"
+
+#: app/views/firewall/index.rhtml:87 app/views/firewall/index.rhtml:87
+msgid "Blocked services"
+msgstr "Blokované služby"
+
+#: app/views/firewall/index.rhtml:125 app/views/firewall/index.rhtml:125
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "Některé potřebné služby (%s) budou blokovány. WebYaST možná nebude více použitelný. Chcete tyto služby opravdu zablokovat?"
+
+#: app/views/firewall/index.rhtml:144 app/views/firewall/index.rhtml:144
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "Čekejte prosím"
+
+#: app/views/firewall/index.rhtml:152 app/views/firewall/index.rhtml:152
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Některé změny nebyly uloženy. Chcete uložit neuložené změny?"
+
+#: shortcuts.yml:8
 msgid "Firewall settings"
-msgstr "Obecná nastavení"
+msgstr "Nastavení firewallu"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Použít Firewall"
+
+#~ msgid "General settings"
+#~ msgstr "Obecné nastavení"
 
 #, fuzzy
 #~| msgid "xlock"
