--- a/plugins/services/po/cs/webyast-services-ui.po
+++ b/plugins/services/po/cs/webyast-services-ui.po
@@ -2,14 +2,16 @@
 # Jaromír Červenka <cervajz@cervajz.com>, 2009.
 # Vojtěch Zeisek <vojta.sc@seznam.cz>, 2009.
 # Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>, 2010.
+# Jiri Srain <jsrain@suse.cz>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-services-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2010-05-24 22:33+0200\n"
-"Last-Translator: Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>\n"
-"Language-Team: Czech <opensuse-translation@opensuse.org>\n"
+"POT-Creation-Date: 2011-05-30 16:16+0200\n"
+"PO-Revision-Date: 2011-06-02 16:28+0200\n"
+"Last-Translator: Jiri Srain <jsrain@suse.cz>\n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,13 +25,15 @@ msgstr "(nelze zjistit stav)"
 
 #: app/controllers/services_controller.rb:74
 #: app/controllers/services_controller.rb:74
+#| msgid "Sorry, the server could not be added: "
 msgid "List of services could not be read"
-msgstr ""
+msgstr "Nepodařilo se načíst seznam služeb"
 
 #: app/controllers/services_controller.rb:76
 #: app/controllers/services_controller.rb:76
+#| msgid "Sorry, the server could not be added: "
 msgid "List of custom services could not be read"
-msgstr ""
+msgstr "Nepodarilo se načíst seznam vlastních služeb"
 
 #: app/controllers/services_controller.rb:112
 #: app/controllers/services_controller.rb:112
@@ -68,123 +72,15 @@ msgstr "program není nastaven"
 
 #: app/controllers/services_controller.rb:119
 #: app/controllers/services_controller.rb:119
-#, fuzzy
+#| msgid "program is not runnning"
 msgid "program is not running"
 msgstr "program neběží"
 
 #: app/controllers/services_controller.rb:126
 #: app/controllers/services_controller.rb:126
+#| msgid "Unknown error"
 msgid "Unknown error on server side"
-msgstr ""
-
-#: app/views/services/_result.rhtml:7 app/views/services/_result.rhtml:7
-msgid "Service Call Result"
-msgstr "Výsledek volání služby"
-
-#: app/views/services/_result.rhtml:10 app/views/services/_result.rhtml:10
-msgid "Result"
-msgstr "Výsledek"
-
-#: app/views/services/_result.rhtml:15 app/views/services/_result.rhtml:15
-msgid "Description"
-msgstr "Popis"
-
-#: app/views/services/index.rhtml:191 app/views/services/index.rhtml:191
-#: shortcuts.yml:7
-msgid "System Services"
-msgstr "Služby systému"
-
-#: app/views/services/index.rhtml:197 app/views/services/index.rhtml:197
-msgid "You do not have permission to execute the services."
-msgstr "Nemáte dostatečná oprávnění ke spuštění služeb."
-
-#: app/views/services/index.rhtml:202 app/views/services/index.rhtml:247
-#: app/views/services/index.rhtml:202 app/views/services/index.rhtml:247
-msgid "Filter services"
-msgstr "Filtrovat služby"
-
-#: app/views/services/index.rhtml:204 app/views/services/index.rhtml:251
-#: app/views/services/index.rhtml:266 app/views/services/index.rhtml:204
-#: app/views/services/index.rhtml:251 app/views/services/index.rhtml:266
-msgid "All"
-msgstr "Vše"
-
-#: app/views/services/index.rhtml:205 app/views/services/index.rhtml:252
-#: app/views/services/index.rhtml:205 app/views/services/index.rhtml:252
-msgid "Running"
-msgstr "Běžící"
-
-#: app/views/services/index.rhtml:206 app/views/services/index.rhtml:253
-#: app/views/services/index.rhtml:206 app/views/services/index.rhtml:253
-msgid "Not Running"
-msgstr "Neběžící"
-
-#: app/views/services/index.rhtml:207 app/views/services/index.rhtml:254
-#: app/views/services/index.rhtml:207 app/views/services/index.rhtml:254
-msgid "Dead"
-msgstr "Mrtvý"
-
-#: app/views/services/index.rhtml:208 app/views/services/index.rhtml:255
-#: app/views/services/index.rhtml:208 app/views/services/index.rhtml:255
-msgid "Started on Boot"
-msgstr "Spuštěno během bootu"
-
-#: app/views/services/index.rhtml:209 app/views/services/index.rhtml:256
-#: app/views/services/index.rhtml:209 app/views/services/index.rhtml:256
-msgid "Not Started on Boot"
-msgstr "Nespuštěno během bootu"
-
-#: app/views/services/index.rhtml:216 app/views/services/index.rhtml:231
-#: app/views/services/index.rhtml:235 app/views/services/index.rhtml:216
-#: app/views/services/index.rhtml:231 app/views/services/index.rhtml:235
-msgid "Quick Search"
-msgstr "Rychlé vyhledávání"
-
-#: app/views/services/index.rhtml:242 app/views/services/index.rhtml:242
-msgid "Add New Repository"
-msgstr ""
-
-#: app/views/services/index.rhtml:262 app/views/services/index.rhtml:262
-#, fuzzy
-msgid "Filter repositories"
-msgstr "Filtrovat služby"
-
-#: app/views/services/index.rhtml:267 app/views/services/index.rhtml:267
-msgid "Enabled"
-msgstr ""
-
-#: app/views/services/index.rhtml:268 app/views/services/index.rhtml:268
-msgid "Disabled"
-msgstr ""
-
-#: app/views/services/index.rhtml:289 app/views/services/index.rhtml:289
-msgid "Description for service is not available"
-msgstr "Popis není pro službu dostupný"
-
-#: app/views/services/index.rhtml:313 app/views/services/index.rhtml:313
-msgid "(refresh)"
-msgstr "(obnovit)"
-
-#: app/views/services/index.rhtml:345 app/views/services/index.rhtml:345
-msgid "Start"
-msgstr "Spustit"
-
-#: app/views/services/index.rhtml:346 app/views/services/index.rhtml:346
-msgid "Stop"
-msgstr "Stop"
-
-#: app/views/services/index.rhtml:347 app/views/services/index.rhtml:347
-msgid "Restart"
-msgstr "Restartovat"
-
-# 54880 AttribValues/label
-#: app/views/services/index.rhtml:348 app/views/services/index.rhtml:348
-msgid "Start on Boot"
-msgstr "Spustit během bootu"
-
-#: app/views/services/index.rhtml:349 app/views/services/index.rhtml:349
-msgid "Do Not Start on Boot"
-msgstr "Nespouštět během bootu"
+msgstr "Neznámá chyba na straně serveru"
 
 #: app/views/services/_status.rhtml:7 app/views/services/_status.rhtml:7
 msgid "Service will be started on boot."
@@ -218,9 +114,108 @@ msgstr "neznámý stav: %d"
 msgid "Current status of the service:"
 msgstr "Současný stav služby:"
 
+#: app/views/services/_result.rhtml:7 app/views/services/_result.rhtml:7
+msgid "Service Call Result"
+msgstr "Výsledek volání služby"
+
+#: app/views/services/_result.rhtml:10 app/views/services/_result.rhtml:10
+msgid "Result"
+msgstr "Výsledek"
+
+#: app/views/services/_result.rhtml:15 app/views/services/_result.rhtml:15
+msgid "Description"
+msgstr "Popis"
+
+#: app/views/services/index.rhtml:196 app/views/services/index.rhtml:203
+#: app/views/services/index.rhtml:196 app/views/services/index.rhtml:203
 #: shortcuts.yml:8
+msgid "System Services"
+msgstr "Služby systému"
+
+#: app/views/services/index.rhtml:213 app/views/services/index.rhtml:213
+msgid "You do not have permission to execute the services."
+msgstr "Nemáte dostatečná oprávnění ke spuštění služeb."
+
+#: app/views/services/index.rhtml:221 app/views/services/index.rhtml:221
+msgid "Quick Search"
+msgstr "Rychlé vyhledávání"
+
+#: app/views/services/index.rhtml:227 app/views/services/index.rhtml:227
+msgid "Filter services"
+msgstr "Filtrovat služby"
+
+#: app/views/services/index.rhtml:231 app/views/services/index.rhtml:231
+msgid "All"
+msgstr "Vše"
+
+#: app/views/services/index.rhtml:232 app/views/services/index.rhtml:232
+msgid "Running"
+msgstr "Běžící"
+
+#: app/views/services/index.rhtml:233 app/views/services/index.rhtml:233
+msgid "Not Running"
+msgstr "Neběžící"
+
+#: app/views/services/index.rhtml:234 app/views/services/index.rhtml:234
+msgid "Dead"
+msgstr "Mrtvý"
+
+#: app/views/services/index.rhtml:235 app/views/services/index.rhtml:235
+msgid "Started on Boot"
+msgstr "Spuštěno během bootu"
+
+#: app/views/services/index.rhtml:236 app/views/services/index.rhtml:236
+msgid "Not Started on Boot"
+msgstr "Nespuštěno během bootu"
+
+#: app/views/services/index.rhtml:253 app/views/services/index.rhtml:253
+msgid "Description for service is not available"
+msgstr "Popis není pro službu dostupný"
+
+#: app/views/services/index.rhtml:275 app/views/services/index.rhtml:275
+msgid "(refresh)"
+msgstr "(obnovit)"
+
+#: app/views/services/index.rhtml:306 app/views/services/index.rhtml:306
+msgid "Start"
+msgstr "Spustit"
+
+#: app/views/services/index.rhtml:307 app/views/services/index.rhtml:307
+msgid "Stop"
+msgstr "Stop"
+
+#: app/views/services/index.rhtml:308 app/views/services/index.rhtml:308
+msgid "Restart"
+msgstr "Restartovat"
+
+# 54880 AttribValues/label
+#: app/views/services/index.rhtml:309 app/views/services/index.rhtml:309
+msgid "Start on Boot"
+msgstr "Spustit během bootu"
+
+#: app/views/services/index.rhtml:310 app/views/services/index.rhtml:310
+msgid "Do Not Start on Boot"
+msgstr "Nespouštět během bootu"
+
+#: shortcuts.yml:9
 msgid "Manage the LSB init scripts"
-msgstr ""
+msgstr "Spravovat LSB init skripty"
+
+#, fuzzy
+#~| msgid "Repository"
+#~ msgid "Add New Repository"
+#~ msgstr "Repozitář"
+
+#, fuzzy
+#~| msgid "Filter services"
+#~ msgid "Filter repositories"
+#~ msgstr "Filtrovat služby"
+
+#~ msgid "Enabled"
+#~ msgstr "povoleno"
+
+#~ msgid "Disabled"
+#~ msgstr "Zakázáno"
 
 #~ msgid "Invalid session, please login again."
 #~ msgstr "Chybná session, prosím přihlaste se znova."
