--- a/plugins/system/po/cs/webyast-reboot-ui.po
+++ b/plugins/system/po/cs/webyast-reboot-ui.po
@@ -2,12 +2,13 @@
 # Jaromír Červenka <cervajz@cervajz.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-reboot-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"POT-Creation-Date: 2011-05-30 16:16+0200\n"
 "PO-Revision-Date: 2009-09-24 21:07+0100\n"
 "Last-Translator: Jaromir Cervenka <cervajz@cervajz.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
