--- a/plugins/software/po/cs/webyast-software-ui.po
+++ b/plugins/software/po/cs/webyast-software-ui.po
@@ -680,3 +680,14 @@ msgstr "Prohlédněte si a spravujte nastavené repozitáře software"
 
 #~ msgid "All Patches have been installed. "
 #~ msgstr "Všechny opravy byly nainstalovány. "
+
+#: app/models/patches_state.rb:33 app/models/patches_state.rb:33
+#| msgid "The installation source was not found."
+msgid "Patch installation messages not confirmed"
+msgstr "Zprávy instalace patche nebyly potvrzeny"
+
+# ok button label
+#: app/models/patches_state.rb:38 app/models/patches_state.rb:38
+msgid "OK"
+msgstr "OK"
+
